@@ -1,6 +1,8 @@
 2006-10-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
 	* Implement [CKCollection -itemsUnderGroup:] and test unit.
+	* Remove records from its groups first 
+          before removing it from collection.
 
 2006-10-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
